--- a/src/routes/home/style.css
+++ b/src/routes/home/style.css
@@ -9,7 +9,7 @@
   background-color: #bbbbbb;
 }
 
-.contentWrapper {
+.content-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
